--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,20 @@
 .App {
-  text-align: center;
+    background-color: #dadada;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.navbar {
+    background: url("./canvas.jpg");
+    color: white;
+}
+.jumbotron{
+    background: url("./image.jpg");
+    background-position: center;
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+footer {
+    text-align: center;
+    padding: 10px;
+    background: url("./canvas.jpg");
 }
